# Poetry pyproject.toml: https://python-poetry.org/docs/pyproject/

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "Flask-RestGlue"
version = "0.0.0"
description = "Flask-RestGlue integrates Flask, MongoDB, OpenAPI in a simple and elegant way"
readme = "README.md"
authors = [
  "Alexandre Bassel <abassel@abassel.com>"
]
license = "MIT"
repository = "https://github.com/abassel/Flask-RestGlue"
homepage = "https://github.com/abassel/Flask-RestGlue"
packages = [
    { include = "flask_rest_glue" },
]


# Keywords description https://python-poetry.org/docs/pyproject/#keywords
keywords = []  # Update me

# Pypi classifiers: https://pypi.org/classifiers/
classifiers = [  # Update me
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Framework :: Flask"
]

#[tool.poetry.scripts]
# Entry points for the package https://python-poetry.org/docs/pyproject/#scripts
#"flask_rest_glue" = "flask_rest_glue.__main__:app"

[tool.poetry.dependencies]
python = "^3.8"
importlib_metadata = {version = ">=1.6,<7.0", python = "<3.8"}
typer = {extras = ["all"], version = ">=0.3.2,<0.10.0"}
Flask = ">=1.1.2,<3.0.0"
mongoengine = ">=0.22.1,<0.29.0"

[tool.poetry.dev-dependencies]
darglint = "^1.8.1"
isort = "^5.12.0"
pyupgrade = "^3.8.0"
mypy = "^1.5"
bandit = "^1.7.5"
safety = "^2.1.1"
pytest = "^7.4.3"
pylint = "^2.17.5"
pydocstyle = "^6.3.0"
pre-commit = "^3.5.0"
mongomock = "^4.1.2"

[tool.black]
# https://github.com/psf/black
line-length = 80
target-version = ["py38"]

[tool.isort]
# https://github.com/timothycrosley/isort/
known_typing = "typing,types,typing_extensions,mypy,mypy_extensions"
sections = "FUTURE,TYPING,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
include_trailing_comma = true
default_section = "FIRSTPARTY"
multi_line_output = 3
indent = 4
force_grid_wrap = 0
use_parentheses = true
line_length = 80
